samples/_failures_safe/1761320808_77864e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b00a2c1.c: In function ‘main’:
./samples/SAFE/__tmp_7b00a2c1.c:167:12: error: missing terminating " character
  167 |     printf("----------|---------------------|------|-------\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7b00a2c1.c:167:5: error: expected expression at end of input
  167 |     printf("----------|---------------------|------|-------\
      |     ^~~~~~
./samples/SAFE/__tmp_7b00a2c1.c:167:5: error: expected declaration or statement at end of input
